corpus/c/syntax/case-01/snapshots/gcc15/dual_sink_structured/render.concise.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: [syntax] expected ';' before '}' token
src/main.c: In function 'main':
    2 |     return 0
      |             ^
      |             ;
    3 | }
      | ~
want: ; @ src/main.c:2:13
near: } token
| src/main.c:2:13
|     return 0
|             ^
suggested edit: insert ';' at src/main.c:2:13
details: --formed-explain | raw: --formed-raw